# tinyproto

./: .hash_db  .travis.yml  AUTHORS.md  CMakeLists.txt  Makefile  Makefile.avr  Makefile.common  Makefile.cpputest  Makefile.esp32  Makefile.linux  Makefile.mingw32  README.md  Release_notes.txt  TODO.txt  component.mk  doxygen.cfg  gen_arduino_release.bat  gen_arduino_release.sh  library.json  library.properties  run_test.sh  setup.py  test_compilation.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
.travis/: check_install.sh  refresh_license.py  run_tests.sh  setup_esp_build_env.sh
doc/html/: TinyProtocol_8h.html  TinyProtocol_8h__incl.map  TinyProtocol_8h__incl.md5  TinyProtocol_8h_source.html  annotated.html  arduino_2src_2proto_2crc_8h_source.html  classTiny_1_1Packet.html  classTiny_1_1Proto-members.html  classTiny_1_1Proto.html  classes.html  dir_000002_000003.html  dir_000004_000000.html  dir_3e42aa6796a3a78f57885b4cb0673062_dep.map  dir_3e42aa6796a3a78f57885b4cb0673062_dep.md5  dir_671d9bd46dfa9a02468d1598db0445ef.html  dir_671d9bd46dfa9a02468d1598db0445ef_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_c85d3e3c5052e9ad9ce18c6863244a25_dep.md5  dir_fbd7474d75b2cb28dc50fdd7e41ac0c8.html  dir_fbd7474d75b2cb28dc50fdd7e41ac0c8_dep.map  dir_fbd7474d75b2cb28dc50fdd7e41ac0c8_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  group__ADVANCED__API.html  group__ERROR__FLAGS.html  group__FLAGS__GROUP.html  group__SIMPLE__API.html  inc_2tiny__layer2_8h.html  inc_2tiny__layer2_8h__incl.map  (+26 more)
doc/latex/: TinyProtocol_8h.tex  TinyProtocol_8h__incl.md5  classTiny_1_1Packet.tex  classTiny_1_1Proto.tex  dir_3e42aa6796a3a78f57885b4cb0673062.tex  dir_3e42aa6796a3a78f57885b4cb0673062_dep.md5  dir_671d9bd46dfa9a02468d1598db0445ef.tex  dir_671d9bd46dfa9a02468d1598db0445ef_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.tex  dir_c85d3e3c5052e9ad9ce18c6863244a25.tex  dir_fbd7474d75b2cb28dc50fdd7e41ac0c8.tex  dir_fbd7474d75b2cb28dc50fdd7e41ac0c8_dep.md5  files.tex  group__ERROR__FLAGS.tex  index.tex  refman.tex  (+14 more)
docs/: TinyHdlc_8h.html  TinyHdlc_8h__incl.map  TinyHdlc_8h__incl.md5  TinyHdlc_8h_source.html  TinyLightProtocol_8h.html  TinyLightProtocol_8h__dep__incl.map  TinyLightProtocol_8h__dep__incl.md5  TinyLightProtocol_8h__incl.map  TinyLightProtocol_8h__incl.md5  TinyLightProtocol_8h_source.html  TinyPacket_8h.html  TinyPacket_8h__dep__incl.map  TinyPacket_8h__dep__incl.md5  TinyPacket_8h__incl.map  TinyPacket_8h__incl.md5  TinyPacket_8h_source.html  TinyProtocolFd_8h.html  TinyProtocolFd_8h__dep__incl.map  TinyProtocolFd_8h__dep__incl.md5  TinyProtocolFd_8h__incl.map  TinyProtocolFd_8h__incl.md5  TinyProtocolFd_8h_source.html  TinyProtocolHd_8h.html  TinyProtocolHd_8h__dep__incl.map  TinyProtocolHd_8h__dep__incl.md5  TinyProtocolHd_8h__incl.map  TinyProtocolHd_8h__incl.md5  TinyProtocolHd_8h_source.html  TinyProtocolHdlc_8h.html  TinyProtocolHdlc_8h__dep__incl.map  TinyProtocolHdlc_8h__dep__incl.md5  TinyProtocolHdlc_8h__incl.map  TinyProtocolHdlc_8h__incl.md5  TinyProtocolHdlc_8h_source.html  TinyProtocol_8h.html  TinyProtocol_8h__incl.map  TinyProtocol_8h__incl.md5  TinyProtocol_8h_source.html  annotated.html  arduino.html  (+274 more)
examples/linux/hdlc_demo_multithread/: CMakeLists.txt  hdlc_demo_multithread.cpp
examples/linux/loopback/: CMakeLists.txt  tiny_loopback.cpp
inc/: tiny_hd.h  tiny_layer2.h  tiny_light.h  tiny_proto_types.h
python/: __init__.py  fd.cpp  fd.h  hdlc_ll.cpp  hdlc_ll.h  main.cpp
src/: TinyHdlc.cpp  TinyHdlc.h  TinyLightProtocol.cpp  TinyLightProtocol.h  TinyPacket.h  TinyProtocol.cpp  TinyProtocol.h  TinyProtocolFd.cpp  TinyProtocolFd.h  TinyProtocolHd.cpp  TinyProtocolHd.h  TinyProtocolHdlc.cpp  TinyProtocolHdlc.h  arduino.dox  mainpage.dox
tools/: generate_coverage.sh  run_tests.sh  style_format.sh
unittest/: CMakeLists.txt  basic_tests.cpp  fake_wire.cpp  fake_wire.h  fd_multidrop_tests.cpp  fd_tests.cpp  hal_tests.cpp  hd_tests.cpp  hdlc_tests.cpp  light_tests.cpp  main.cpp  packet_tests.cpp
(+531 files in other folders)
